--- a/style.css
+++ b/style.css
@@ -12,8 +12,10 @@ body {
   background-position: center;
   background-size: cover;
   position: relative;
+  overflow: hidden;
 }
 .main {
+  position: relative;
   height: 100vh;
   width: 100%;
   display: flex;
