--- a/style.css
+++ b/style.css
@@ -12,18 +12,55 @@ body {
   background-position: center;
   background-size: cover;
   position: relative;
-  overflow: hidden;
+  /* overflow: hidden; */
 }
-.main {
-  position: relative;
-  height: 100vh;
-  width: 100%;
+.app {
+  margin: 2rem 0rem;
+
   display: flex;
-  text-align: center;
+  flex-direction: column;
+  justify-content: space-between;
   align-items: center;
-  justify-content: center;
+}
+.header {
+  height: 4rem;
+  text-align: center;
   font-weight: 500;
-  font-size: 5rem;
+  font-size: 2rem;
   text-wrap: wrap;
   letter-spacing: 5px;
+}
+.main {
+  margin-top: -10rem;
+  height: 4rem;
+  text-align: center;
+  font-weight: 500;
+  font-size: 2rem;
+  text-wrap: wrap;
+  letter-spacing: 5px;
+}
+.ques {
+  font-size: 3rem;
+  background-color: white;
+  color: white;
+  padding: 0.6rem 1.8rem;
+  border-radius: 50%;
+  background: transparent;
+  border: 5px solid white;
+  animation: emphasis 1s infinite;
+  box-shadow: 0 0 30px #3498db;
+  /* margin-left: auto; */
+  /* animation: glow 1s infinite; */
+}
+
+@keyframes emphasis {
+  0% {
+    transform: scale(1);
+  }
+  50% {
+    transform: scale(1.1);
+  }
+  100% {
+    transform: scale(1);
+  }
 }
