--- a/style.css
+++ b/style.css
@@ -15,31 +15,39 @@ body {
   /* overflow: hidden; */
 }
 .app {
-  margin: 2rem 0rem;
-
-  display: flex;
+  /* margin: 2rem 0rem; */
+  display: grid;
+  height: 100dvh;
+  grid-template-rows: auto 1fr auto;
+  /* display: flex;
   flex-direction: column;
   justify-content: space-between;
-  align-items: center;
+  align-items: center; */
 }
 .header {
-  height: 4rem;
+  /* height: 4rem; */
+  padding: 2rem 0;
   text-align: center;
   font-weight: 500;
   font-size: 2rem;
-  text-wrap: wrap;
   letter-spacing: 5px;
+  text-shadow: 5px 5px 10px #fff;
 }
 .main {
-  margin-top: -10rem;
-  height: 4rem;
+  align-self: center;
   text-align: center;
   font-weight: 500;
   font-size: 2rem;
   text-wrap: wrap;
   letter-spacing: 5px;
+  text-shadow: 5px 5px 10px #fff;
 }
 .ques {
+  margin-bottom: 2rem;
+  margin-right: 2rem;
+  max-width: 5%;
+  align-self: center;
+  justify-self: right;
   font-size: 3rem;
   background-color: white;
   color: white;
@@ -49,8 +57,6 @@ body {
   border: 5px solid white;
   animation: emphasis 1s infinite;
   box-shadow: 0 0 30px #3498db;
-  /* margin-left: auto; */
-  /* animation: glow 1s infinite; */
 }
 
 @keyframes emphasis {
