--- a/style.css
+++ b/style.css
@@ -85,6 +85,7 @@ body {
   opacity: 0.9;
   text-decoration: none;
   cursor: pointer;
+  margin-bottom: 4rem;
 }
 
 @keyframes emphasis {
@@ -108,4 +109,11 @@ body {
   backdrop-filter: blur(0.25px);
   z-index: -5;
   transition: all 0.5s;
+}
+.foot {
+  position: absolute;
+  left: 50%;
+  bottom: 2%;
+  transform: translateX(-50%);
+  letter-spacing: 2px;
 }
